--- a/tEST/Views/Home/AboutComtec.cshtml
+++ b/tEST/Views/Home/AboutComtec.cshtml
@@ -42,14 +42,14 @@
         <h2>@ViewData["Title"]</h2>
     </header>
 
-    <div style="margin:33%; width:100%; float:left;">
+    <div style="width:100%; float:none; text-align:center;">
         <text>
             Trading since 1978, we have offices in the UK, Far East and Middle East.<br />
             Our success lies in our unique approach, from selecting the right product for the right job through to managing entire supply chains.
         </text>
         <br />
         <br />
-        <address style="margin:auto;">
+        <address style="float:none;">
             Cardinal Way<br />
             Cardinal Distribution Park<br />
             Godmanchester<br />
