--- a/tEST/Views/Home/Index.cshtml
+++ b/tEST/Views/Home/Index.cshtml
@@ -76,7 +76,7 @@
 
                             @using (Html.BeginForm("ComtecWeb", "Home", FormMethod.Post))
                             {
-                                <button id="Website" style="background-color:#476cac; width: 550px; height:250px; color:white;" onclick="ComtecWeb()" value="Website">Comtec Website</button>
+                                <button id="Website" style="background-color:#476cac; width: 550px; height:250px; color:white;" onclick="ComtecWeb()" value="Website">Comtec Catalogue</button>
                             }
                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                             @using (Html.BeginForm("PrizeDraw", "Home", FormMethod.Post))
