--- a/tEST/Views/Shared/_Layout.cshtml
+++ b/tEST/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     </environment>
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top" style="width:100%">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -33,13 +33,10 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="PrizeDraw">Prize Draw</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="SignUp">Sign Up</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="AboutComtec">About Comtec</a></li>
+                    <li><a href="https://comtecdirect.co.uk/" target="_blank">Website</a></li>
                     <!--<li><a asp-area="" asp-controller="Home" asp-action="Admin">Admin</a></li>-->
                 </ul>
-                <div class="nav navbar-nav navbar-right navbar-collapse collapse">
-                    <ul>
-                        <li style="margin-right:35px; color:dimgrey; margin-top:13px; "><a asp-area="" asp-controller="Home" asp-action="AboutComtec">About Comtec</a></li>
-                    </ul>
-                </div>
             </div>
             
         </div>
