prize draw check box loxation fix

--- a/tEST/Views/Home/SignUp.cshtml
+++ b/tEST/Views/Home/SignUp.cshtml
@@ -77,6 +77,10 @@
             display: inline-block;
             float: right;
         }
+        .prizdrawCheck {
+            display: inline;
+            float: none;
+        }
     </style>
 </head>
 <body>
@@ -250,7 +254,7 @@
                                             <br />
                                             <br />
                                             <text style="font-size:20px;">Would you like to be entered into our prize draw?</text>
-                                            <input type="checkbox" name="prizeDraw" runat="server" value="true" />
+                                            <input type="checkbox" class="prizdrawCheck" name="prizeDraw" runat="server" value="true" />
                                             <br />
                                             <br />
                                         </content>
