Image changes and Functionality update

--- a/tEST/Views/Home/_Carousel.cshtml
+++ b/tEST/Views/Home/_Carousel.cshtml
@@ -19,8 +19,8 @@
 
     <div class="carousel-inner" role="listbox">
         @{
-            string path = @"C:/Users/jjohnson/source/repos/tEST/tEST/wwwroot/images/NewFolder/";
-            string[] filePaths = Directory.GetFiles(path, "*.jpg");
+            string path = @"C:/Users/jjohnson/source/repos/EventApplication/tEST/wwwroot/images/NewFolder/";
+            string[] filePaths = Directory.GetFiles(path, "*.png");
 
             Random rnd = new Random();
 
