--- a/tEST/Views/Home/_Carousel.cshtml
+++ b/tEST/Views/Home/_Carousel.cshtml
@@ -19,7 +19,7 @@
 
     <div class="carousel-inner" role="listbox">
         @{
-            string path = @"C:/Users/jjohnson/source/repos/EventApplication/tEST/wwwroot/images/NewFolder/";
+            string path = "C:/Users/jjohnson/source/repos/EventApplication/tEST/wwwroot/imagesNewFolder";
             string[] filePaths = Directory.GetFiles(path, "*.png");
 
             Random rnd = new Random();
