--- a/tEST/Views/Home/ComtecWeb.cshtml
+++ b/tEST/Views/Home/ComtecWeb.cshtml
@@ -15,7 +15,7 @@
 <body>
     <main>
         <br />
-        <iframe src="http://ultima-comms.com/" name="iframe_a" height="700" style= "width:100%; float:left;"></iframe>
+        <iframe src="~/images/pdfs/Comtec Big Blue Book 6_NoPrices.pdf" name="iframe_a" height="700" style= "width:100%; float:left;"></iframe>
         <br />
         
     </main>
