--- a/tEST/Views/Home/SignUp.cshtml
+++ b/tEST/Views/Home/SignUp.cshtml
@@ -255,8 +255,8 @@
                                             </fieldset>
                                             <br />
                                             <br />
-                                            <text style="font-size:20px;">Would you like to be entered into our prize draw?</text>
-                                            <input type="checkbox" class="prizdrawCheck" name="prizeDraw" runat="server" value="true" />
+                                            @*<text style="font-size:20px;">Would you like to be entered into our prize draw?</text>
+                                            <input type="checkbox" class="prizdrawCheck" name="prizeDraw" runat="server" value="true" />*@
                                             <br />
                                             <br />
                                         </content>
