--- a/tEST/Views/Shared/_Layout.cshtml
+++ b/tEST/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Comtec ICELIVE 2018</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">ISE 2018</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
