--- a/tEST/Views/Shared/_Layout.cshtml
+++ b/tEST/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Comtec IceLive2018</title>
+    <title>@ViewData["Title"] - ISE 2018</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -33,12 +33,12 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     @*<li><a asp-area="" asp-controller="Home" asp-action="PrizeDraw">Prize Draw</a></li>*@
                     <li><a asp-area="" asp-controller="Home" asp-action="SignUp">Sign Up</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="AboutComtec">About Comtec</a></li>
+                    @*<li><a asp-area="" asp-controller="Home" asp-action="AboutComtec">About Comtec</a></li>*@
                     <li><a href="https://comtecdirect.co.uk/" target="_blank">Website</a></li>
                     <!--<li><a asp-area="" asp-controller="Home" asp-action="Admin">Admin</a></li>-->
                 </ul>
             </div>
-            
+
         </div>
     </nav>
     <div class="container body-content">
